# inotify-info-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  Taskfile.yml
.github/: dependabot.yml  labeler.yml
.github/workflows/: reportcard.yml  rust.yml
src/: lib.rs  linux.rs  linux_not.rs  main.rs
src/linux/: cli.rs
