[package]
name = "inotify-info-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "inotify-info-rs"
path = "src/bin/inotify-info.rs"

[lib]
name = "inotify_info_rs"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
colored = "2.1.0"
tempfile = "3.10.1"
